--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "AppSettings": {
-    "Token": "super secret key"
+    "Token": "xxxxxx"
   },
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=DatingApp.db"
@@ -19,8 +19,8 @@
     }
   },
   "CloudinarySettings": {
-    "CloudName": "dj3wmuy3l",
-    "ApiKey": "347865541414692",
-    "ApiSecret": "S5gkkjugSaPSFd1zmCccaL6FNRc"
+    "CloudName": "xxxxxx",
+    "ApiKey": "xxxxxxx",
+    "ApiSecret": "xxxxxxx"
   }
 }
